@@ -1,2 +1,3 @@
 libnames := acqdata
-libsrcs_acqdata := src/ConfigV1.cc src/DataDescV1.cc
+libsrcs_acqdata := src/ConfigV1.cc src/DataDescV1.cc 
+libsrcs_acqdata += src/TdcConfigV1.cc src/TdcDataV1.cc
