@@ -52,6 +52,8 @@ const char* TypeId::name(Type type)
     "DiodeFex",
     "PimImageConfig",
     "SharedIpimb",
+    "AcqTDCConfig",
+    "AcqTDCData"
   };
   return (type < NumberOf ? _names[type] : "-Invalid-");
 }
