@@ -1,3 +1,4 @@
+2010-Dec-17	weaver	Tag V02-10-02	Added new acqiris/Tdc data types.
 2010-Dec-09	tomy		Modified xtc/Detinfo.hh and xtc/src/DetInfo.cc to add CXI detector IDs.
 2010-Nov-30	weaver	Tag V02-10-00.  Added evr/ConfigV5 and evr/SequencerConfigV1.
 2010-Nov-02     caf     Tag V02-08-05.
